--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~13.3.0",
     "@auth0/angular-jwt": "^5.0.2",
     "angular-routing": "^0.3.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.0.0",
     "chart.js": "^3.9.1",
+    "jquery": "^3.6.0",
     "ng-multiselect-dropdown": "^0.3.8",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.14",
     "tslib": "^2.3.0",
