--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@auth0/angular-jwt": "^5.0.2",
     "angular-routing": "^0.3.1",
     "bootstrap": "^4.0.0",
-    "chart.js": "^3.9.1",
+    "echarts": "5.3.2",
     "jquery": "^3.6.0",
     "ng-multiselect-dropdown": "^0.3.8",
+    "ngx-echarts": "8.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.14",
