--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "echarts": "5.3.2",
     "jquery": "^3.6.0",
     "ng-multiselect-dropdown": "^0.3.8",
+    "ng2-order-pipe": "^0.1.5",
+    "ng2-search-filter": "^0.5.1",
     "ngx-echarts": "8.0.1",
+    "ngx-pagination": "^6.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.14",
